--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 <script type="text/javascript" src="game/objects/arkanoidPaddle.js"></script>
 <script type="text/javascript" src="game/objects/arkanoidBall.js"></script>
 <script type="text/javascript" src="game/collision/AABB.js"></script>
+<script type="text/javascript" src="game/objects/Plane.js"></script>
 
 <style>
 
