--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 <script type="text/javascript" src="game/objects/arkanoidBall.js"></script>
 <script type="text/javascript" src="game/collision/AABB.js"></script>
 <script type="text/javascript" src="game/objects/Plane.js"></script>
+<script type="text/javascript" src="game/objects/particleTexture.js"></script>
 
 <style>
 
