--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <html>
 
 <head>
+
+<script type="text/javascript" src="wonsz.js"></script>
+    
 <script type="text/javascript" src="index.js"></script>
 
 <script type="text/javascript" src="game/object3d.js"></script>
@@ -9,12 +12,11 @@
 <script type="text/javascript" src="utils/utils.js"></script>
 <script type="text/javascript" src="game/renderer.js"></script>
 <script type="text/javascript" src="game/objects/cube.js"></script>
-<script type="text/javascript" src="game/objects/snakeTail.js"></script>
-<script type="text/javascript" src="game/objects/snakeHead.js"></script>
 <script type="text/javascript" src="game/scene.js"></script>
 <script type="text/javascript" src="game/collision.js"></script>
 <script type="text/javascript" src="game/camera.js"></script>
 <script type="text/javascript" src="game/light.js"></script>
+<script type="text/javascript" src="game/texture.js"></script>
 <script type="text/javascript" src="game/objects/particleEmitter.js"></script>
 <script type="text/javascript" src="game/objects/debug.js"></script>
 <script type="text/javascript" src="game/inputHandler.js"></script>
@@ -22,7 +24,6 @@
 <script type="text/javascript" src="game/objects/arkanoidPaddle.js"></script>
 <script type="text/javascript" src="game/objects/arkanoidBall.js"></script>
 <script type="text/javascript" src="game/collision/AABB.js"></script>
-<script type="text/javascript" src="game/objects/Plane.js"></script>
 <script type="text/javascript" src="game/objects/particleTexture.js"></script>
 
 <style>
