--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <script type="text/javascript" src="game/renderer.js"></script>
 <script type="text/javascript" src="game/objects/cube.js"></script>
 <script type="text/javascript" src="game/scene.js"></script>
-<script type="text/javascript" src="game/collision.js"></script>
+<script type="text/javascript" src="game/collisionGrid.js"></script>
 <script type="text/javascript" src="game/camera.js"></script>
 <script type="text/javascript" src="game/light.js"></script>
 <script type="text/javascript" src="game/texture.js"></script>
