--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
 </head>
 
 
-<body onload="webGLStart();">
+<body>
 
-    <canvas id="canvas" style="border: none;"></canvas>
-
+    <canvas id="canvas" width="1024" height="512" style="border: none;"></canvas>
+	<input id="startButton" type="button" value="Start" onclick="start();"/>
 </body>
 
 </html>
